; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_condvar7.c_mythread.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_condvar7.c_mythread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32 }
%struct.TYPE_5__ = type { i64, i32, i32 }

@threadbag = common dso_local global %struct.TYPE_4__* null, align 8
@start_flag = common dso_local global i32 0, align 4
@cvthing = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@abstime = common dso_local global i32 0, align 4
@awoken = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mythread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @threadbag, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i64 %10
  %12 = icmp eq %struct.TYPE_4__* %6, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i32 1, i32* %22, align 8
  %23 = call i64 @pthread_mutex_lock(i32* @start_flag)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = call i64 @pthread_mutex_unlock(i32* @start_flag)
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = call i64 @pthread_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 1))
  %32 = icmp eq i64 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert(i32 %33)
  %35 = call i32 @pthread_cleanup_push(i64 (i32*)* @pthread_mutex_unlock, i8* bitcast (i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 1) to i8*))
  br label %36

36:                                               ; preds = %40, %1
  %37 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 0), align 8
  %38 = icmp sgt i64 %37, 0
  %39 = xor i1 %38, true
  br i1 %39, label %40, label %45

40:                                               ; preds = %36
  %41 = call i64 @pthread_cond_timedwait(i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 2), i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 1), i32* @abstime)
  %42 = icmp eq i64 %41, 0
  %43 = zext i1 %42 to i32
  %44 = call i32 @assert(i32 %43)
  br label %36

45:                                               ; preds = %36
  %46 = call i32 @pthread_cleanup_pop(i32 0)
  %47 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 0), align 8
  %48 = icmp sgt i64 %47, 0
  %49 = zext i1 %48 to i32
  %50 = call i32 @assert(i32 %49)
  %51 = load i32, i32* @awoken, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* @awoken, align 4
  %53 = call i64 @pthread_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cvthing, i32 0, i32 1))
  %54 = icmp eq i64 %53, 0
  %55 = zext i1 %54 to i32
  %56 = call i32 @assert(i32 %55)
  ret i8* null
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @pthread_mutex_lock(i32*) #1

declare dso_local i64 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @pthread_cleanup_push(i64 (i32*)*, i8*) #1

declare dso_local i64 @pthread_cond_timedwait(i32*, i32*, i32*) #1

declare dso_local i32 @pthread_cleanup_pop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
